--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,7 @@
     <script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="assets/dist/js/adminlte.min.js"></script>
+
+    <script src="https://kit.fontawesome.com/7e06df0584.js" crossorigin="anonymous"></script>
   </body>
 </html>
